test/spec_vectors/f32/fail/module_8.wat
(module (func (result f32) (f32.floor (i64.const 0))))